--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: MCM Jasir
+page-top-title: MCM Jasir
+top-section-bg-text: Researcher
+home-subtitle: Jasir;|&Jasir
+copyright-text: '&copy; MCM Jair 2023-2024. All Rights Reserved.'
