--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: MCM Jasir
 page-top-title: MCM Jasir
 top-section-bg-text: Researcher
-home-subtitle: Jasir;|&Jasir
+home-subtitle: MCM Jasir
 copyright-text: '&copy; MCM Jair 2023-2024. All Rights Reserved.'
